update app and middleware

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "simple-socket-chat",
   "version": "1.0.0",
   "description": "A simple app using socket.io to create a cheat relay",
-  "main": "index.js",
+  "main": "server/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,5 +19,11 @@
   "bugs": {
     "url": "https://github.com/ErikAbrahamson/simple-socket-chat/issues"
   },
-  "homepage": "https://github.com/ErikAbrahamson/simple-socket-chat#readme"
+  "homepage": "https://github.com/ErikAbrahamson/simple-socket-chat#readme",
+  "dependencies": {
+    "ejs": "^2.3.4",
+    "express": "^4.13.3",
+    "path": "^0.12.7",
+    "socket.io": "^1.3.7"
+  }
 }
